kubes/django.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bangers-django
  namespace: nkdsu
  labels:
    app: bangers
    part: django
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bangers
      part: django
  template:
    metadata:
      annotations:
        cni.projectcalico.org/ipv6pools: "[\"default-ipv6-ippool\"]"
      labels:
        app: bangers
        part: django
    spec:
      volumes:
        - name: static
          persistentVolumeClaim:
            claimName: bangers-django-static
        - name: media
          persistentVolumeClaim:
            claimName: bangers-django-media
      containers:
        - name: gunicorn
          image: theenbyperor/nkdsu-bangers-django:(version)
          imagePullPolicy: Always
          command: ["gunicorn", "-w", "8", "-b", "[::]:8000", "--forwarded-allow-ips", "*", "--access-logfile", "-", "--log-level=debug", "--timeout=90", "nkdsu_banger.wsgi:application"]
          ports:
            - containerPort: 8000
          volumeMounts:
            - mountPath: "/app/static/"
              name: static
            - mountPath: "/app/media/"
              name: media
---
apiVersion: v1
kind: Service
metadata:
  name: bangers-django
  namespace: nkdsu
  labels:
    app: bangers
    part: django
spec:
  selector:
    app: bangers
    part: django
  ports:
    - port: 8000
      targetPort: 8000
