kubes/nginx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bangers-nginx
  namespace: nkdsu
  labels:
    app: bangers
    part: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bangers
      part: nginx
  template:
    metadata:
      annotations:
        cni.projectcalico.org/ipv6pools: "[\"default-ipv6-ippool\"]"
      labels:
        app: bangers
        part: nginx
    spec:
      volumes:
        - name: static
          persistentVolumeClaim:
            claimName: bangers-django-static
        - name: media
          persistentVolumeClaim:
            claimName: bangers-django-media
        - name: conf
          configMap:
            name: bangers-nginx-conf
      containers:
        - name: nginx
          image: nginx
          ports:
            - containerPort: 80
          volumeMounts:
            - mountPath: "/data/static/"
              name: static
            - mountPath: "/data/media/"
              name: media
            - mountPath: "/etc/nginx/nginx.conf"
              name: conf
              subPath: "nginx.conf"
---
apiVersion: v1
kind: Service
metadata:
  name: bangers-nginx
  namespace: nkdsu
  labels:
    app: bangers
    part: nginx
spec:
  selector:
    app: bangers
    part: nginx
  ports:
    - port: 80
      targetPort: 80
      name: nginx
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: bangers-ingress
  namespace: nkdsu
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
spec:
  tls:
    - hosts:
        - nkdsu-bangers.magicalcodewit.ch
      secretName: bangers-tls
  rules:
  - host: nkdsu-bangers.magicalcodewit.ch
    http:
      paths:
      - path: /
        backend:
          serviceName: bangers-nginx
          servicePort: 80
